
pandoc-fignos 0.7.6 (2016-01-23)

    * Fixed autolink_bare_uris processing that got accidentally broke.


pandoc-fignos 0.7.5.1 (2016-01-23)

    * Fixed MANIFEST.in which listed wrong files.


pandoc-fignos 0.7.5 (2016-01-22)

    * Attempted Replacement for pypi release that had missing files.


pandoc-fignos 0.7.4 (2016-01-22)

    * Fixed AttributeError bug that occurred for links
      emphasized [*like this*](http://example.com/) (Issue #8).


pandoc-fignos 0.7.3 (2016-01-13)

    * Fixed TypeError bug that occurred with pandoc < 1.16.


pandoc-fignos 0.7, 0.7.1 and 0.7.2 (2016-01-09)

    * Fixed problems when pandoc's autolink_bare_uris is used
      (Issue #6).


pandoc-fignos 0.6 (2016-01-01)

    * Flush stdout before exiting (Issue #5).


pandoc-fignos 0.5 (2015-12-30):

    * Update to work with pandoc 1.16 that is currently in
      development (Issue #7).

      If you are using pandoc < 1.16 then everything should work
      as it did before.

      Pandoc 1.16 introduces image attributes.  The new syntax does
      not allow a space between an image and its attributes.  Please
      update your markdown accordingly.

    * Fixed curly-brace references in lists (Issue #6).


pandoc-fignos 0.4 (2015-07-16)

    * Construct links for html (Issue #5).
    * Removed fignos-keepattr option.


pandoc-fignos 0.3 (2015-07-15)

    * Enforce pandoc's requirement of UTF-8 (Issue #4).


pandoc-fignos 0.2.2 (2015-06-07)

    * Added README.md and LICENSE to MANIFEST.in so that they
      get distributed via pip.


pandoc-fignos 0.2.1 (2015-06-03)

    * Included missing install dependency in MANIFEST.in.
    * Updated documentation.


pandoc-fignos 0.2 (2015-06-01)

    * Permit generic figure labeling (e.g., {#fig:}).
    * Fixed crash that occurs when reference info is contained in
      the yaml header.
    * Updated documentation.
    * Made release available through pypi.


pandoc-fignos 0.1 (2015-03-14)

    * initial release
