@@ -1,0 +1,2 @@
+
+This directory contains regression tests.  Running `make` produces out/demo-*.pdf files that you may inspect visually.  Versioned pandoc executables must on your path (see the Makefile).
